--- a/NODE-APP/package.json
+++ b/NODE-APP/package.json
@@ -12,6 +12,8 @@
   "author": "JJ",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "test111898989": "^1.2.1"
